syntax="proto3";

package assfire.api.v1.services.sample;
option go_package = "assfire.org/api/v1/services/sample";

import "assfire/api/v1/model/sample/sample.proto";
import "google/api/annotations.proto";

message GreetRequest
{
  assfire.api.v1.model.sample.User user = 1;
}

message GreetResponse
{
  string greeting = 1;
}

service GreeterService {
  rpc Greet(GreetRequest) returns (GreetResponse){
    option (google.api.http) = {
      get: "/v1/sample/greet"
    };
  };
}